feat: add makefile & update README.md
